# adhesive

./: README.md  meson.build
.github/workflows/: codeql.yml  msvc.yml
include/: linked_list.h  stack.h  vector.h
include/adhesive/: linked_list.h  math.h  string.h  vector.h
src/: linked_list.c  stack.c  string.c
